; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_multi_executor.c_ExecutePlanIntoDestReceiver.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_multi_executor.c_ExecutePlanIntoDestReceiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@FETCH_ALL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"SELECT\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ExecutePlanIntoDestReceiver(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %7, align 8
  store i32 0, i32* %8, align 4
  %10 = load i64, i64* @FETCH_ALL, align 8
  store i64 %10, i64* %9, align 8
  %11 = call %struct.TYPE_7__* (...) @CreateNewPortal()
  store %struct.TYPE_7__* %11, %struct.TYPE_7__** %7, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  store i32 0, i32* %13, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @list_make1(i32* %15)
  %17 = call i32 @PortalDefineQuery(%struct.TYPE_7__* %14, i32* null, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %16, i32* null)
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 (...) @GetActiveSnapshot()
  %22 = call i32 @PortalStart(%struct.TYPE_7__* %18, i32 %19, i32 %20, i32 %21)
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %24 = load i64, i64* %9, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @PortalRun(%struct.TYPE_7__* %23, i64 %24, i32 0, i32 1, i32* %25, i32* %26, i32* null)
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %29 = call i32 @PortalDrop(%struct.TYPE_7__* %28, i32 0)
  ret void
}

declare dso_local %struct.TYPE_7__* @CreateNewPortal(...) #1

declare dso_local i32 @PortalDefineQuery(%struct.TYPE_7__*, i32*, i8*, i8*, i32, i32*) #1

declare dso_local i32 @list_make1(i32*) #1

declare dso_local i32 @PortalStart(%struct.TYPE_7__*, i32, i32, i32) #1

declare dso_local i32 @GetActiveSnapshot(...) #1

declare dso_local i32 @PortalRun(%struct.TYPE_7__*, i64, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @PortalDrop(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
